--- a/text/bibli.bib
+++ b/text/bibli.bib
@@ -2779,3 +2779,81 @@ year={1972}
   organization={Springer}
 }
 
+@article{miguel2017direito,
+  title={O direito ao aborto no debate legislativo brasileiro: a ofensiva conservadora na C{\^a}mara dos Deputados},
+  author={Miguel, Luis Felipe and Santos, Rayani Mariano dos},
+  year={2017},
+  publisher={Centro de Estudos de Opiniao Publica da Universidade Estadual de Campinas}
+}
+
+@article{santos2017debate,
+  title={O debate sobre aborto na C{\^a}mara dos Deputados (1991-2014): posi{\c{c}}{\~o}es e vozes das mulheres parlamentares},
+  author={Santos, Rayani Mariano dos},
+  year={2017},
+  publisher={N{\'u}cleo de Estudos de G{\^e}nero-Pagu}
+}
+
+@article{machado2013discursos,
+  title={Discursos pentecostais em torno do aborto e da homossexualidade na sociedade brasileira},
+  author={Machado, Maria das Dores Campos},
+  journal={Revista Cultura y Religi{\'o}n},
+  volume={7},
+  number={2},
+  pages={48},
+  year={2013},
+  publisher={Universidad de Arturo Prat}
+}
+
+@article{lacerda2016ideologia,
+  title={Ideologia de g{\^e}nero” na C{\^a}mara dos Deputados},
+  author={Lacerda, Marina Basso},
+  journal={Anais do 10{\textordmasculine} Encontro da Associa{\c{c}}{\~a}o Brasileira de Ci{\^e}ncia Pol{\'\i}tica, Belo Horizonte},
+  volume={30},
+  year={2016}
+}
+
+@phdthesis{gonccalves2016discurso,
+  title={O discurso religioso na pol{\'\i}tica e a pol{\'\i}tica no discurso religioso: uma an{\'a}lise da atua{\c{c}}{\~a}o da Frente Parlamentar Evang{\'e}lica na C{\^a}mara dos Deputados (2003-2014)},
+  author={Gon{\c{c}}alves, Rafael Bruno},
+  year={2016},
+  school={Tese (Doutorado em Sociologia), IESP, Rio de Janeiro}
+}
+
+
+@article{faganello2017voto,
+  title={O voto na bancada da bala: estudo de geografia eleitoral na cidade de S{\~a}o Paulo (2012/2016)},
+  author={Faganello, Marco Antonio},
+  year={2017},
+  publisher={Dissertaç{\~a}o de Mestrado}
+}
+
+@article{faganellobancada,
+  title={Bancada da Bala: uma onda na mar{\'e} conservadora},
+  author={Faganello, Marco Antonio},
+  journal={Direita, volver},
+  pages={145--161},
+   year={2015}
+}
+
+@misc{berlatto2015candidatos,
+  title={Candidatos policiais na pol{\'\i}tica nacional: uma an{\'a}lise dos aspirantes a deputado federal},
+  author={BERLATTO, F{\'a}bia and CODATO, Adriano},
+  year={2015}
+}
+
+@article{berlatto2016policia,
+  title={Da pol{\'\i}cia {\`a} pol{\'\i}tica: explicando o perfil dos candidatos das for{\c{c}}as repressivas de Estado {\`a} C{\^a}mara dos Deputados},
+  author={Berlatto, F{\'a}bia and Codato, Adriano and Bolognesi, Bruno},
+  journal={Revista Brasileira de Ci{\^e}ncia Pol{\'\i}tica},
+  number={21},
+  pages={77--120},
+  year={2016}
+}
+
+@phdthesis{novello2018bancada,
+  title={$\backslash$'Bancada da Bala$\backslash$': discursos e pr{\'a}ticas sobre puni{\c{c}}{\~a}o, crime e inseguran{\c{c}}a na Assembleia Legislativa de S{\~a}o Paulo},
+  author={Novello, Roberta Heleno},
+  year={2018},
+  school={Universidade de S{\~a}o Paulo}
+}
+
