changes after Nara observations

--- a/text/bibli.bib
+++ b/text/bibli.bib
@@ -612,9 +612,6 @@ f
  note = "[Online; publicado em 26-Abril-2018]"
 }
 
-
-
-
 @article{reis2015race,
   title={Race discrimination in Brazil: an analysis of the age, period and cohort effects},
   author={Reis, Maur{\'\i}cio Cortez and Crespo, Anna Risi Vianna},
@@ -677,7 +674,7 @@ f
 }
 
 @TECHREPORT {fbsp2017medo,
-    author      = "F{\'o}rum Brasileiro de Segurança P{\'u}blica",
+    author      = "{F{\'o}rum Brasileiro de Segurança P{\'u}blica}",
     title       = "Medo da Viol{\^e}ncia e o Apoio ao Autoritarismo no Brasil",
     institution = "Medo da Viol{\^e}ncia e o Apoio ao Autoritarismo no Brasil",
     year        = "2017",
@@ -2855,5 +2852,175 @@ year={1972}
   author={Novello, Roberta Heleno},
   year={2018},
   school={Universidade de S{\~a}o Paulo}
+}
+
+@article{netto2017dinheiro,
+  title={O dinheiro importa menos para os candidatos evang{\'e}licos?},
+  author={Netto, Gabriela Figueiredo and Speck, Bruno Wilhelm},
+  journal={Opini{\~a}o P{\'u}blica},
+  volume={23},
+  number={3},
+  pages={809--836},
+  year={2017},
+  publisher={SciELO Brasil}
+}
+
+@misc{congresso2016bancadas,
+ author = {{Agência Pública}},
+ editor = {{UOL}},
+ title = {Congresso em Foco: Conheça as 11 bancadas mais poderosas da Câmara},
+ url = {https://congressoemfoco.uol.com.br/especial/noticias/conheca-as-11-bancadas-mais-poderosas-da-camara/},
+ year = {2016},
+ note = "[Online; publicado em 19-Fevereiro-2016]"
+}
+
+@incollection{hopf1993authoritarians,
+  title={Authoritarians and their families: Qualitative studies on the origins of authoritarian dispositions},
+  author={Hopf, Christel},
+  booktitle={Strength and Weakness},
+  pages={119--143},
+  year={1993},
+  publisher={Springer}
+}
+
+@article{van2009authoritarianism,
+  title={Authoritarianism is good for you: Right-wing authoritarianism as a buffering factor for mental distress},
+  author={Van Hiel, Alain and De Clercq, Barbara},
+  journal={European Journal of Personality: Published for the European Association of Personality Psychology},
+  volume={23},
+  number={1},
+  pages={33--50},
+  year={2009},
+  publisher={Wiley Online Library}
+}
+
+@article{lewis2014common,
+  title={Common heritable effects underpin concerns over norm maintenance and in-group favoritism: Evidence from genetic analyses of right-wing authoritarianism and traditionalism},
+  author={Lewis, Gary J and Bates, Timothy C},
+  journal={Journal of Personality},
+  volume={82},
+  number={4},
+  pages={297--309},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+
+@article{fuks2012atitudes,
+  title={Atitudes, cogni{\c{c}}{\~a}o e participa{\c{c}}{\~a}o pol{\'\i}tica: padr{\~o}es de influ{\^e}ncia dos ambientes de socializa{\c{c}}{\~a}o sobre o perfil pol{\'\i}tico dos jovens},
+  author={Fuks, Mario},
+  journal={Opini{\~a}o P{\'u}blica},
+  volume={18},
+  number={1},
+  pages={88--108},
+  year={2012},
+  publisher={SciELO Brasil}
+}
+
+@article{pereira2001sistemas,
+  title={Sistemas de valores e atitudes democr{\'a}ticas de estudantes universit{\'a}rios de Jo{\~a}o Pessoa},
+  author={Pereira, Cicero Roberto and Lima, Marcus Eug{\^e}nio Oliveira and Larrain, Leoncio Francisco Camino Rodriguez},
+  journal={Psicologia: Reflex{\~a}o e Cr{\'\i}tica},
+  year={2001},
+  publisher={SciELO Brasil}
+}
+@article{pereira2004sistemas,
+  title={Sistemas de valores e atitudes democr{\'a}ticas de estudantes universit{\'a}rios},
+  author={Pereira, C{\'\i}cero and Torres, Ana Raquel Rosas and Barros, Tha{\'\i}s S},
+  journal={Psicologia: teoria e pesquisa},
+  volume={20},
+  number={1},
+  pages={001--010},
+  year={2004},
+  publisher={SciELO Brasil}
+}
+
+@incollection{betz2016against,
+  title={Against the current—stem ming the tide: the nostalgic ideology of the contemporary radical populist right},
+  author={Betz, Hans-Georg and Johnson, Carol},
+  booktitle={The Populist Radical Right},
+  pages={86--100},
+  year={2016},
+  publisher={Routledge}
+}
+
+@article{berlet2019rural,
+  title={Rural rage: the roots of right-wing populism in the United States},
+  author={Berlet, Chip and Sunshine, Spencer},
+  journal={The Journal of Peasant Studies},
+  volume={46},
+  number={3},
+  pages={480--513},
+  year={2019},
+  publisher={Taylor \& Francis}
+}
+
+@article{mamonova2019populism,
+  title={Populism, neoliberalism and agrarian movements in Europe. Understanding rural support for right-wing politics and looking for progressive solutions},
+  author={Mamonova, Natalia and Franquesa, Jaume},
+  journal={Sociologia Ruralis},
+  year={2019},
+  publisher={Wiley Online Library}
+}
+
+@article{ballard2017economic,
+  title={The economic origins of authoritarian values: evidence from local trade shocks in the United Kingdom},
+  author={Ballard-Rosa, Cameron and Malik, Mashail and Rickard, Stephanie and Scheve, Kenneth},
+  journal={Unpublished manuscript, Department of Political Science, University of North Carolina at Chapel Hill. https://goo. gl/T6XG3T},
+  year={2017}
+}
+
+@article{do2016religiao,
+  title={Religi{\~a}o e Pol{\'\i}tica: resson{\^a}ncias do neoconservadorismo evang{\'e}lico nas m{\'\i}dias brasileiras},
+  author={do Nascimento Cunha, Magali},
+  journal={Perseu: Hist{\'o}ria, Mem{\'o}ria e Pol{\'\i}tica},
+  number={11},
+  year={2016}
+}
+
+@article{codato2015nova,
+  title={A nova direita brasileira: uma an{\'a}lise da din{\^a}mica partid{\'a}ria e eleitoral do campo conservador},
+  author={Codato, Adriano and Bolognesi, Bruno and Roeder, Karolina Mattos},
+  journal={Direita, volver},
+  pages={115--144},
+  year={2015}
+}
+
+@article{mamonova2019understanding,
+  title={Understanding the silent majority in authoritarian populism: what can we learn from popular support for Putin in rural Russia?},
+  author={Mamonova, Natalia},
+  journal={The Journal of Peasant Studies},
+  volume={46},
+  number={3},
+  pages={561--585},
+  year={2019},
+  publisher={Taylor \& Francis}
+}
+
+@article{de2016familias,
+  title={Fam{\'\i}lias Pol{\'\i}ticas e Desempenho Eleitoral nas Elei{\c{c}}{\~o}es de 2014. Fam{\'\i}lia como vari{\'a}vel pol{\'\i}tica nas elei{\c{c}}{\~o}es},
+  author={de Oliveira, Ricardo Costa},
+  journal={Revista NEP-N{\'u}cleo de Estudos Paranaenses da UFPR},
+  volume={2},
+  number={4},
+  pages={1--4},
+  year={2016}
+}
+
+@article{xavier2015senhores,
+  title={“Senhores da Lei, Donos da Terra”: o arauto da bancada ruralista na C{\^a}mara dos Deputados (2009-2014)},
+  author={Xavier, Glauber Lopes},
+  journal={Estudos Sociedade e Agricultura},
+  year={2015}
+}
+
+@article{adams2011candidates,
+  title={When candidates value good character: A spatial model with applications to congressional elections},
+  author={Adams, James and Merrill III, Samuel and Simas, Elizabeth N and Stone, Walter J},
+  journal={The Journal of Politics},
+  volume={73},
+  number={1},
+  pages={17--30},
+  year={2011},
+  publisher={Cambridge University Press New York, USA}
 }
 
